objects/pse__Skill_Certification_Rating__c.object
<CustomObject>
    <customHelpPage>pse__SkillCertificationRatingHelp</customHelpPage>
    <description>Records a resource&apos;s proficiency rating in a skill/certification.</description>
    <fields>
        <fullName>pse__Approval_Status__c</fullName>
        <description>Indicates the approval status of the rating.</description>
        <inlineHelpText>Indicates the approval status of the rating.</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Saved</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Aspiration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, indicates the resource&apos;s interest in acquiring or gaining additional knowledge of this skill.</description>
        <inlineHelpText>If selected, indicates the resource&apos;s interest in acquiring or gaining additional knowledge of this skill.</inlineHelpText>
        <label>Aspiration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, indicates that the resource&apos;s certification is accredited and active. If deselected, indicates that the certification is inactive.</description>
        <inlineHelpText>If selected, indicates that the resource&apos;s certification is accredited and active. If deselected, indicates that the certification is inactive.</inlineHelpText>
        <label>Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Date_Achieved__c</fullName>
        <description>The date when the rating was achieved.</description>
        <inlineHelpText>The date when the rating was achieved.</inlineHelpText>
        <label>Date Achieved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Evaluation_Date__c</fullName>
        <description>Date on which the rating was evaluated.</description>
        <inlineHelpText>Date on which the rating was evaluated.</inlineHelpText>
        <label>Evaluation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Expiration_Date__c</fullName>
        <description>Date on which the skill or certification rating expires.</description>
        <inlineHelpText>Date on which the skill or certification rating expires.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Last_Used_Date__c</fullName>
        <description>The date when the resource last used the skill.</description>
        <inlineHelpText>The date when the resource last used the skill.</inlineHelpText>
        <label>Last Used Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Notes__c</fullName>
        <description>You can enter information about the skill or certification rating.</description>
        <inlineHelpText>You can enter information about the skill or certification rating.</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Numerical_Rating__c</fullName>
        <formula>IF(
        		ISNUMBER(
        			LEFT(TEXT(pse__Rating__c),2)
        		),
				VALUE(LEFT(TEXT(pse__Rating__c),2)),
				VALUE(LEFT(TEXT(pse__Rating__c),1))
			)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numerical Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Rating__c</fullName>
        <description>The level of exposure or ability that the resource has for the skill or certification.</description>
        <inlineHelpText>The level of exposure or ability that the resource has for the skill or certification.</inlineHelpText>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>1 – Training</fullName>
                </value>
                <value>
                    <fullName>2 – Consulting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <description>The resource to which the rating applies.</description>
        <inlineHelpText>The resource to which the rating applies.</inlineHelpText>
        <label>Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Skill and Certification Ratings</relationshipLabel>
        <relationshipName>Skill_Certification_Ratings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pse__Skill_Certification__c</fullName>
        <description>The skill or certification to which the rating applies.</description>
        <inlineHelpText>The skill or certification to which the rating applies.</inlineHelpText>
        <label>Skill / Certification</label>
        <referenceTo>pse__Skill__c</referenceTo>
        <relationshipLabel>Resource Ratings</relationshipLabel>
        <relationshipName>Resource_Ratings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pse__Years_Experience__c</fullName>
        <description>The number of years&apos; experience a resource has in a skill.</description>
        <inlineHelpText>The number of years&apos; experience a resource has in a skill.</inlineHelpText>
        <label>Years of Experience</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Skill / Certification Rating</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Rating{0000000}</displayFormat>
        <label>Rating Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skill and Certification Ratings</pluralLabel>
    <recordTypes>
        <fullName>TR_PS_Enterprise_Skill_Certification_Rating</fullName>
        <active>true</active>
        <label>TR PS Enterprise Skill/Certification Rating</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>pse__Check_Resource</fullName>
        <active>true</active>
        <errorConditionFormula>AND(LEN(pse__Resource__c) &gt;  0,  NOT( pse__Resource__r.pse__Is_Resource__c))</errorConditionFormula>
        <errorDisplayField>pse__Resource__c</errorDisplayField>
        <errorMessage>Resource lookup must be set to an Contact with Is Resource = true</errorMessage>
    </validationRules>
</CustomObject>